--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/carnow.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\jhon.chavez\\Downloads\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\jhon.chavez\\Downloads\\mysql-connector-java-5.1.13-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.13-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
