--- a/mylogin-one/mylogin-one/nbproject/project.properties
+++ b/mylogin-one/mylogin-one/nbproject/project.properties
@@ -28,8 +28,10 @@ dist.jar=${dist.dir}/comunicacion_interna_cliente.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.commons-codec-1.13.jar=C:\\Users\\Christian.Moreno\\Downloads\\commons-codec-1.13-bin\\commons-codec-1.13\\commons-codec-1.13.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\jhon.chavez\\Downloads\\jcalendar-1.4.jar
 file.reference.JCarrierPigeon-1.3.jar=C:\\Users\\RONNY.SOTILLET\\Desktop\\Archive-0012\\JCarrierPigeon-1.3.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=/home/evilnapsis/Downloads/mysql-connector-java-5.1.38/mysql-connector-java-5.1.38-bin.jar
+file.reference.PlaceHolder.jar=C:\\Users\\jhon.chavez\\Downloads\\PlaceHolder.jar
 file.reference.sqljdbc42.jar=Z:\\Equipo Desarrollo\\Microsoft JDBC Driver 6.0 for SQL Server\\sqljdbc_6.0\\esn\\jre8\\sqljdbc42.jar
 file.reference.timingframework-classic-1.1.jar=C:\\Users\\RONNY.SOTILLET\\Desktop\\Archive-0012\\timingframework-classic-1.1.jar
 includes=**
@@ -40,7 +42,9 @@ javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.JCarrierPigeon-1.3.jar}:\
     ${file.reference.timingframework-classic-1.1.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.PlaceHolder.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
